ziplinter/src/snapshots/ziplinter__test__snapshot_zip_files-13.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "directory_headers": [
    {
      "comment": "",
      "compressed_size": 0,
      "crc32": 0,
      "creator_version": {
        "host_system": "MsDos",
        "version": 20
      },
      "disk_nbr_start": 0,
      "external_attrs": 0,
      "extra": "",
      "flags": 0,
      "header_offset": 0,
      "internal_attrs": 0,
      "method": "Store",
      "modified": {
        "date": 19295,
        "time": 43389
      },
      "name": "test.txt",
      "reader_version": {
        "host_system": "MsDos",
        "version": 20
      },
      "uncompressed_size": 0
    }
  ],
  "encoding": "Utf8",
  "entries": [
    {
      "accessed": null,
      "comment": "",
      "compressed_size": 0,
      "crc32": 0,
      "created": null,
      "flags": 0,
      "gid": null,
      "header_offset": 0,
      "method": "Store",
      "mode": 438,
      "modified": "2017-10-31T21:11:58Z",
      "name": "test.txt",
      "reader_version": {
        "host_system": "MsDos",
        "version": 20
      },
      "uid": null,
      "uncompressed_size": 0
    }
  ],
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 38,
        "directory_records": 1,
        "directory_size": 54,
        "disk_nbr": 0
      },
      "offset": 92
    },
    "dir64": null,
    "global_offset": 0
  },
  "size": 114
}
