ziplinter/src/snapshots/ziplinter__test__snapshot_zip_files-3.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "directory_headers": [
    {
      "comment": "",
      "compressed_size": 9,
      "crc32": 2392783569,
      "creator_version": {
        "host_system": "Unix",
        "version": 30
      },
      "disk_nbr_start": 0,
      "external_attrs": 2717843456,
      "extra": [
        85,
        84,
        5,
        0,
        3,
        32,
        88,
        44,
        79,
        117,
        120,
        11,
        0,
        1,
        4,
        232,
        3,
        0,
        0,
        4,
        232,
        3,
        0,
        0
      ],
      "flags": 0,
      "header_offset": 0,
      "internal_attrs": 0,
      "method": "Store",
      "modified": {
        "date": 16451,
        "time": 40728
      },
      "name": "symlink",
      "reader_version": {
        "host_system": "MsDos",
        "version": 10
      },
      "uncompressed_size": 9
    }
  ],
  "encoding": "Utf8",
  "entries": [
    {
      "accessed": null,
      "comment": "",
      "compressed_size": 9,
      "crc32": 2392783569,
      "created": null,
      "flags": 0,
      "gid": 1000,
      "header_offset": 0,
      "method": "Store",
      "mode": 134218239,
      "modified": "2012-02-03T21:56:48Z",
      "name": "symlink",
      "reader_version": {
        "host_system": "MsDos",
        "version": 10
      },
      "uid": 1000,
      "uncompressed_size": 9
    }
  ],
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 74,
        "directory_records": 1,
        "directory_size": 77,
        "disk_nbr": 0
      },
      "offset": 151
    },
    "dir64": null,
    "global_offset": 0
  },
  "size": 173
}
